--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
 	"dependencies": {
-		"hono": "^4.10.7"
+		"hono": "^4.10.7",
+		"openai": "^6.9.1"
 	},
 	"devDependencies": {
 		"wrangler": "^4.51.0"
