--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,45 +3,63 @@
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "cloudflare-ai-proxy",
-	"main": "src/index.ts",
-	"compatibility_date": "2025-11-28",
-	"assets": {
-		"binding": "ASSETS",
-		"directory": "./public"
-	},
-	"observability": {
-		"enabled": true
-	}
-	/**
-	 * Smart Placement
-	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
-	 */
-	// "placement": { "mode": "smart" }
-	/**
-	 * Bindings
-	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
-	 * databases, object storage, AI inference, real-time communication and more.
-	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
-	 */
-	/**
-	 * Environment Variables
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-	 */
-	// "vars": { "MY_VARIABLE": "production_value" }
-	/**
-	 * Note: Use secrets to store sensitive data.
-	 * https://developers.cloudflare.com/workers/configuration/secrets/
-	 */
-	/**
-	 * Static Assets
-	 * https://developers.cloudflare.com/workers/static-assets/binding/
-	 */
-	// "assets": { "directory": "./public/", "binding": "ASSETS" }
-	/**
-	 * Service Bindings (communicate between multiple Workers)
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
-	 */
-	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+  "$schema": "node_modules/wrangler/config-schema.json",
+  "name": "cloudflare-ai-proxy",
+  "main": "src/index.ts",
+  "compatibility_date": "2025-11-28",
+  "assets": {
+    "binding": "ASSETS",
+    "directory": "./public"
+  },
+  "observability": {
+    "enabled": true
+  },
+  /**
+   * Production Environment
+   * Deploy with: pnpm run deploy
+   * This keeps production config separate from local development (.dev.vars)
+   */
+  "vars": {
+    "MODELS_CONFIG": "[{\"endpoint\":\"/v1/fd816c5ea0e9e99af371aadf4ffd601e/proxy/compat\",\"id\":\"google-ai-studio/gemini-flash-latest\",\"name\":\"gemini-flash-latest\"},{\"endpoint\":\"/v1/fd816c5ea0e9e99af371aadf4ffd601e/proxy/compat\",\"id\":\"google-ai-studio/models/gemini-2.5-flash\",\"name\":\"gemini-2.5-flash\"},{\"endpoint\":\"/v1/fd816c5ea0e9e99af371aadf4ffd601e/proxy/compat\",\"id\":\"google-ai-studio/gemini-2.5-pro\",\"name\":\"gemini-2.5-pro\"},{\"endpoint\":\"/v1/fd816c5ea0e9e99af371aadf4ffd601e/proxy/openrouter\",\"id\":\"x-ai/grok-4.1-fast:free\",\"name\":\"grok-4.1-fast:free\"},{\"endpoint\":\"/v1/fd816c5ea0e9e99af371aadf4ffd601e/proxy/openrouter\",\"id\":\"moonshotai/kimi-k2:free\",\"name\":\"kimi-k2:free\"}]"
+  }
+  /**
+   * Environment Variables
+   * Note: Set these in .dev.vars for local development
+   * or in Cloudflare Dashboard → Workers → Settings → Variables for production
+   *
+   * Required variables:
+   * - CF_GATEWAY_KEY: Your Cloudflare AI Gateway key
+   * - PROXY_API_KEY: Your custom authentication token
+   * - MODELS_CONFIG: JSON array of model configurations
+   */
+  /**
+   * Smart Placement
+   * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
+   */
+  // "placement": { "mode": "smart" }
+  /**
+   * Bindings
+   * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
+   * databases, object storage, AI inference, real-time communication and more.
+   * https://developers.cloudflare.com/workers/runtime-apis/bindings/
+   */
+  /**
+   * Environment Variables
+   * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
+   */
+  // "vars": { "MY_VARIABLE": "production_value" }
+  /**
+   * Note: Use secrets to store sensitive data.
+   * https://developers.cloudflare.com/workers/configuration/secrets/
+   */
+  /**
+   * Static Assets
+   * https://developers.cloudflare.com/workers/static-assets/binding/
+   */
+  // "assets": { "directory": "./public/", "binding": "ASSETS" }
+  /**
+   * Service Bindings (communicate between multiple Workers)
+   * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
+   */
+  // "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
 }
